[gd_scene load_steps=45 format=3 uid="uid://cm7e5ir8ykhpv"]

[ext_resource type="Script" uid="uid://cnff6x5ax6es" path="res://sources/minigames/caterpillar/caterpillar_head.gd" id="1_775bq"]
[ext_resource type="Texture2D" uid="uid://cyxl5ep0vuavl" path="res://assets/minigames/caterpillar/graphics/caterpillar_spritesheet.png" id="9_qh6do"]
[ext_resource type="AudioStream" uid="uid://cwq2mee1dy4w7" path="res://assets/minigames/caterpillar/audios/caterpillar_eat_random_01.mp3" id="26_f75m3"]
[ext_resource type="Script" uid="uid://b37yj46mbp3s2" path="res://sources/minigames/caterpillar/caterpillar_audio_stream_player.gd" id="27_x0mct"]
[ext_resource type="PackedScene" uid="uid://dyn71e3ttv2le" path="res://sources/minigames/caterpillar/spit_fx.tscn" id="28_vojnm"]

[sub_resource type="AtlasTexture" id="AtlasTexture_5v128"]
atlas = ExtResource("9_qh6do")
region = Rect2(0, 820, 410, 410)

[sub_resource type="AtlasTexture" id="AtlasTexture_vibkh"]
atlas = ExtResource("9_qh6do")
region = Rect2(410, 820, 410, 410)

[sub_resource type="AtlasTexture" id="AtlasTexture_mq30j"]
atlas = ExtResource("9_qh6do")
region = Rect2(820, 820, 410, 410)

[sub_resource type="AtlasTexture" id="AtlasTexture_rbtkw"]
atlas = ExtResource("9_qh6do")
region = Rect2(1230, 820, 410, 410)

[sub_resource type="AtlasTexture" id="AtlasTexture_8atv4"]
atlas = ExtResource("9_qh6do")
region = Rect2(1640, 820, 410, 410)

[sub_resource type="AtlasTexture" id="AtlasTexture_f2eeo"]
atlas = ExtResource("9_qh6do")
region = Rect2(2050, 820, 410, 410)

[sub_resource type="AtlasTexture" id="AtlasTexture_68rst"]
atlas = ExtResource("9_qh6do")
region = Rect2(2460, 820, 410, 410)

[sub_resource type="AtlasTexture" id="AtlasTexture_uac1u"]
atlas = ExtResource("9_qh6do")
region = Rect2(2870, 820, 410, 410)

[sub_resource type="AtlasTexture" id="AtlasTexture_bebcu"]
atlas = ExtResource("9_qh6do")
region = Rect2(0, 1230, 410, 410)

[sub_resource type="AtlasTexture" id="AtlasTexture_d2ur7"]
atlas = ExtResource("9_qh6do")
region = Rect2(410, 1230, 410, 410)

[sub_resource type="AtlasTexture" id="AtlasTexture_k5lmj"]
atlas = ExtResource("9_qh6do")
region = Rect2(820, 1230, 410, 410)

[sub_resource type="AtlasTexture" id="AtlasTexture_aar5i"]
atlas = ExtResource("9_qh6do")
region = Rect2(1230, 1230, 410, 410)

[sub_resource type="AtlasTexture" id="AtlasTexture_qh6do"]
atlas = ExtResource("9_qh6do")
region = Rect2(1640, 1230, 410, 410)

[sub_resource type="AtlasTexture" id="AtlasTexture_qcwo7"]
atlas = ExtResource("9_qh6do")
region = Rect2(2050, 1230, 410, 410)

[sub_resource type="AtlasTexture" id="AtlasTexture_0juk6"]
atlas = ExtResource("9_qh6do")
region = Rect2(0, 0, 410, 410)

[sub_resource type="AtlasTexture" id="AtlasTexture_3f424"]
atlas = ExtResource("9_qh6do")
region = Rect2(410, 0, 410, 410)

[sub_resource type="AtlasTexture" id="AtlasTexture_daps1"]
atlas = ExtResource("9_qh6do")
region = Rect2(820, 0, 410, 410)

[sub_resource type="AtlasTexture" id="AtlasTexture_mttxd"]
atlas = ExtResource("9_qh6do")
region = Rect2(1230, 0, 410, 410)

[sub_resource type="AtlasTexture" id="AtlasTexture_duafw"]
atlas = ExtResource("9_qh6do")
region = Rect2(1640, 0, 410, 410)

[sub_resource type="AtlasTexture" id="AtlasTexture_fl3sr"]
atlas = ExtResource("9_qh6do")
region = Rect2(2050, 0, 410, 410)

[sub_resource type="AtlasTexture" id="AtlasTexture_yn5gx"]
atlas = ExtResource("9_qh6do")
region = Rect2(2460, 0, 410, 410)

[sub_resource type="AtlasTexture" id="AtlasTexture_xrnoq"]
atlas = ExtResource("9_qh6do")
region = Rect2(2870, 0, 410, 410)

[sub_resource type="AtlasTexture" id="AtlasTexture_qbu41"]
atlas = ExtResource("9_qh6do")
region = Rect2(0, 410, 410, 410)

[sub_resource type="AtlasTexture" id="AtlasTexture_t5crg"]
atlas = ExtResource("9_qh6do")
region = Rect2(410, 410, 410, 410)

[sub_resource type="AtlasTexture" id="AtlasTexture_j2uob"]
atlas = ExtResource("9_qh6do")
region = Rect2(820, 410, 410, 410)

[sub_resource type="AtlasTexture" id="AtlasTexture_juao2"]
atlas = ExtResource("9_qh6do")
region = Rect2(1230, 410, 410, 410)

[sub_resource type="AtlasTexture" id="AtlasTexture_jhrxf"]
atlas = ExtResource("9_qh6do")
region = Rect2(1640, 410, 410, 410)

[sub_resource type="AtlasTexture" id="AtlasTexture_l7sv6"]
atlas = ExtResource("9_qh6do")
region = Rect2(2050, 410, 410, 410)

[sub_resource type="AtlasTexture" id="AtlasTexture_pofaq"]
atlas = ExtResource("9_qh6do")
region = Rect2(2460, 410, 410, 410)

[sub_resource type="AtlasTexture" id="AtlasTexture_671tm"]
atlas = ExtResource("9_qh6do")
region = Rect2(2870, 410, 410, 410)

[sub_resource type="AtlasTexture" id="AtlasTexture_njy36"]
atlas = ExtResource("9_qh6do")
region = Rect2(0, 1640, 410, 410)

[sub_resource type="AtlasTexture" id="AtlasTexture_6lthe"]
atlas = ExtResource("9_qh6do")
region = Rect2(410, 1640, 410, 410)

[sub_resource type="AtlasTexture" id="AtlasTexture_3nvlf"]
atlas = ExtResource("9_qh6do")
region = Rect2(820, 1640, 410, 410)

[sub_resource type="AtlasTexture" id="AtlasTexture_ydhaj"]
atlas = ExtResource("9_qh6do")
region = Rect2(1230, 1640, 410, 410)

[sub_resource type="AtlasTexture" id="AtlasTexture_fc32k"]
atlas = ExtResource("9_qh6do")
region = Rect2(1640, 1640, 410, 410)

[sub_resource type="AtlasTexture" id="AtlasTexture_q4ia1"]
atlas = ExtResource("9_qh6do")
region = Rect2(2050, 1640, 410, 410)

[sub_resource type="AtlasTexture" id="AtlasTexture_uah8d"]
atlas = ExtResource("9_qh6do")
region = Rect2(2460, 1640, 410, 410)

[sub_resource type="AtlasTexture" id="AtlasTexture_sx40b"]
atlas = ExtResource("9_qh6do")
region = Rect2(2870, 1640, 410, 410)

[sub_resource type="SpriteFrames" id="SpriteFrames_x8rro"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_5v128")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_vibkh")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_mq30j")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_rbtkw")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_8atv4")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_f2eeo")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_68rst")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_uac1u")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_bebcu")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_d2ur7")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_k5lmj")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_aar5i")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_qh6do")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_qcwo7")
}],
"loop": false,
"name": &"eat",
"speed": 12.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_0juk6")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_3f424")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_daps1")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_mttxd")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_duafw")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_fl3sr")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_yn5gx")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_xrnoq")
}],
"loop": true,
"name": &"idle",
"speed": 12.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_qbu41")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_t5crg")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_j2uob")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_juao2")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_jhrxf")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_l7sv6")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_pofaq")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_671tm")
}],
"loop": false,
"name": &"idle_blink",
"speed": 12.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_njy36")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_6lthe")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_3nvlf")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ydhaj")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_fc32k")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_q4ia1")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_uah8d")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_sx40b")
}],
"loop": false,
"name": &"spit",
"speed": 12.0
}]

[node name="CaterpillarHead" type="Node2D"]
script = ExtResource("1_775bq")

[node name="SpitFX" parent="." instance=ExtResource("28_vojnm")]
offset_left = 656.0
offset_top = -260.0
offset_right = 656.0
offset_bottom = -260.0

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
sprite_frames = SubResource("SpriteFrames_x8rro")
animation = &"idle"
autoplay = "idle"
frame_progress = 0.6966647

[node name="CaterpillarAudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource("26_f75m3")
bus = &"Effects"
script = ExtResource("27_x0mct")

[connection signal="animation_finished" from="AnimatedSprite2D" to="." method="_on_animation_finished"]
